# orthanc-auth-service

./: .gitignore
minimal-setup/keycloak/: Makefile  README.add-role.md  README.md  README.todo.md  auth_pyramid.drawio  docker-compose.yml  dockerfile  orthanc_script.py  permissions.jsonc  pyproject.toml  pytest.ini  realm-export.json  ruff.toml
minimal-setup/keycloak/manual-integration/: README.add-role.md
