[tool.poetry]
name = "DAM"
version = "0.1.0"
description = "Dicom Album Manager with auth service for Orthanc"
authors = ["Jérémie Bernard"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pyorthanc = "^1.18"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
